[package]
name = "rnx2crx"
version = "1.4.0"
license = "MPL-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "RINEX compression command line utility"
homepage = "https://github.com/rtk-rs"
repository = "https://github.com/rtk-rs/rnx2crx"
keywords = ["geo", "compression"] 
categories = ["science", "science::geo", "command-line-interface", "command-line-utilities"]
edition = "2021"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
rinex = { version = "0.17.0-alpha-3", features = ["flate2"] }
